# match-by-mike-ai

./: .gitignore  embeddings.py  main.py  pyproject.toml
api/: __init__.py  route.py
core/: __init__.py  config.py  lifespan.py
frontend/: package-lock.json
frontend/src/: App.jsx
model/: __init__.py  schemas.py
notebooks/: rough.ipynb
service/: __init__.py  candidate_filter.py  candidate_reranker.py  job_description_extractor.py  recommendation_service.py
supabase/: config.toml
supabase/migrations/: 20260505155045_create_candidates_table.sql  20260505164404_add_candidates.sql  20260507114013_create_match_function.sql  20260507124957_grant_candidates_permissions.sql
