[project]
name = "mike-ingestion-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "langchain-core>=1.3.3",
    "langchain-openai>=1.2.1",
    "openai>=2.34.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "supabase>=2.29.0",
    "uvicorn>=0.46.0",
]
